autoinstall jvmtoolchain, gradle outside of docker